examples/test/testpolicy1468.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1468
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key25: value31
      key9: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value28
      podSelector:
        matchLabels:
          key37: value15
          key32: value40
          key41: value44
